Fix disappearing profile image on small screens

--- a/src/Components/Navigation/Navigation.scss
+++ b/src/Components/Navigation/Navigation.scss
@@ -39,6 +39,7 @@
       margin-right: 15px;
       font-size: 1.3rem;
       height: 1.25em;
+      min-width: 1.25em;
       border-radius: 50%;
       background-position: 50%;
       background-size: 100%;
